testsuite/negative/duplicate.n
def f (_x : int, y : int, _x : int) { // E: duplicate parameter name
   _x + y
}

_ = f (1,2,3)